--- a/.ci_support/linux_64_r_base4.5.yaml
+++ b/.ci_support/linux_64_r_base4.5.yaml
@@ -18,6 +18,10 @@ cxx_compiler_version:
 - '14'
 docker_image:
 - quay.io/condaforge/linux-anvil-x86_64:alma9
+fortran_compiler:
+- gfortran
+fortran_compiler_version:
+- '14'
 libblas:
 - 3.9.* *netlib
 liblapack:
@@ -33,3 +37,4 @@ target_platform:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+  - fortran_compiler_version
